add link to outlines

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,7 +5,11 @@
     </li>
     <li id="notes_link">
       <a href="{{ "/lectures/" | prepend: site.baseurl}}"
-        >Lecture Notes</a>
+        >In Class Lecture Notes</a>
+    </li>
+    <li id="notes_link">
+      <a href="https://github.com/dkrashen/fa-notes/raw/master/fa.pdf"
+        >Typeset Lecture Outlines</a>
     </li>
 		<li>
       <a href="http://dkrashen.github.io"
