--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,11 +5,11 @@
     </li>
     <li id="notes_link">
       <a href="{{ "/lectures/" | prepend: site.baseurl}}"
-        >In Class Lecture Notes</a>
+        >Lecture Notes</a>
     </li>
     <li id="notes_link">
       <a href="https://github.com/dkrashen/fa-notes/raw/master/fa.pdf"
-        >Typeset Lecture Outlines</a>
+        >Typeset Outlines</a>
     </li>
 		<li>
       <a href="http://dkrashen.github.io"
